<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalhe_filme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.mfelipesp.desafioinfoglobo.DetalheFilmeActivity"
    tools:showIn="@layout/activity_detalhe_filme">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opening"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ano"
                android:textSize="12pt"
                android:textStyle="bold"
                android:text="@string/ano_exemplo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nome"
                android:textSize="6pt"
                android:text="@string/nome_exemplo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/genero"
                android:textSize="6pt"
                android:text="@string/genero_exemplo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/duracao"
                android:textSize="6pt"
                android:text="@string/duracao_exemplo"/>

            <TextView
                android:textSize="6pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pais"
                android:text="@string/pais_exemplo"/>

            <RatingBar
                android:id="@+id/classificacao"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1.0"
                android:rating="2.0"
                android:scrollbarSize="5dp"/>


        </LinearLayout>

    </LinearLayout>
    <!-- Fim do Linear Layout da Imagem -->

    <TextView
        android:paddingTop="75dp"
        android:textSize="6pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descricao"
        android:gravity="center"
        android:text="O filme tem um monte de superherois"/>


</LinearLayout>
